Version meta adapted. Copied-in models from partial port, render type adapted accordingly. Minor adaptions.